plugins {
    id 'java'
    id 'application'
    id 'idea'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

application{
    mainClassName = 'uk.co.hexillium.rhul.compsoc.Bot'
}

group 'uk.co.hexillium.rhul'
version '1.0'

repositories {
    mavenCentral()
//    jcenter()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
}

jar {
    manifest {
        attributes(
                'Class-Path': 'postgresql-42.2.9.jar',
        )
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    // https://mvnrepository.com/artifact/com.sparkjava/spark-core
    implementation group: 'com.sparkjava', name: 'spark-core', version: '2.9.4'
    implementation 'net.dv8tion:JDA:5.0.0-beta.13'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.1'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j18-impl
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '2.17.1'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
    // https://mvnrepository.com/artifact/io.github.classgraph/classgraph
    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.114'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

    //for graphing the score histories
    implementation 'org.jfree:jfreechart:1.5.3'

    //for the regex challenges, to verify the solution works, or the red herring doesn't work
    implementation 'com.google.re2j:re2j:1.6'

    //to send mail
    //i think
    implementation 'org.eclipse.angus:angus-mail:2.0.1'
}
sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16
